--- a/meeti.html
+++ b/meeti.html
@@ -9,6 +9,84 @@
     <link rel="stylesheet" href="build/css/app.css">
 </head>
 <body>
+    <header class="header contenedor">
+        <div class="header__logo">
+            <a href="index.html">
+                <img src="build/img/logo.png" alt="Logo" class="header__img">
+            </a>
+        </div>
 
+        <nav class="navegacion">
+            <ul class="navegacion__list">
+                <li class="navegacion__item">
+                    <a href="#" class="navegacion__enlace navegacion__enlace--grupo">Crear Grupo</a>
+                </li>
+                <li class="navegacion__item">
+                    <a href="#" class="navegacion__enlace">Iniciar Sesión</a>
+                </li>
+                <li class="navegacion__item">
+                    <a href="#" class="navegacion__enlace">Registrarse</a>
+                </li>
+            </ul>
+        </nav>
+    </header>
+
+    <main class="meeti contenedor">
+        <h1 class="meeti__heading">Headless WordPress con Next.js</h1>
+
+        <div class="meeti__grid">
+            <div class="meeti__contenido">
+                <picture>
+                    <source srcset="build/img/meeti.avif" type="image/avif">
+                    <source srcset="build/img/meeti.webp" type="image/webp">
+                    <source srcset="build/img/meeti.jpg" type="image/jpg">
+                    <img loading="lazy" src="build/img/meeti.jpg" width="500" height="300" alt="meeti imagen">
+                </picture>
+
+                <p class="meeti__texto">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea totam fugit repellendus est minima? Facilis eum sequi quaerat enim debitis quidem cupiditate, minus similique commodi officiis eveniet distinctio eligendi. Vitae.
+                </p>
+                <p class="meeti__texto">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea totam fugit repellendus est minima? Facilis eum sequi quaerat enim debitis quidem cupiditate, minus similique commodi officiis eveniet distinctio eligendi. Vitae.
+                </p>
+            </div>
+
+            <div class="sidebar">
+                <picture>
+                    <source srcset="build/img/mapa.avif" type="image/avif">
+                    <source srcset="build/img/mapa.webp" type="image/webp">
+                    <source srcset="build/img/mapa.jpg" type="image/jpg">
+                    <img loading="lazy" src="build/img/mapa.jpg" width="500" height="300" alt="imagen mapa">
+                </picture>
+
+                <aside class="sidebar__info">
+                    <h3 class="sidebar__heading">Información Meeti</h3>
+
+                    <p class="sidebar__datos"><span>Fecha:</span> 30 de Diciembre de 2022</p>
+                    <p class="sidebar__datos"><span>Hora:</span> 20:30</p>
+                    <p class="sidebar__datos"><span>Ubicación:</span> Av. Vallarta 3033</p>
+                </aside>
+
+            </div>
+        </div>
+
+    </main>
+
+    <footer class="footer contenedor">
+        <nav class="navegacion">
+            <ul class="navegacion__list">
+                <li class="navegacion__item">
+                    <a href="#" class="navegacion__enlace navegacion__enlace--grupo">Crear Grupo</a>
+                </li>
+                <li class="navegacion__item">
+                    <a href="#" class="navegacion__enlace">Iniciar Sesión</a>
+                </li>
+                <li class="navegacion__item">
+                    <a href="#" class="navegacion__enlace">Registrarse</a>
+                </li>
+            </ul>
+        </nav>
+        <p class="footer__texto">Todos los derechos reservados. Meeti &copy;</p>
+    </footer>
 </body>
 </html>
